--- a/make-autosite/make-autosite.csproj
+++ b/make-autosite/make-autosite.csproj
@@ -12,8 +12,14 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>make_autosite</RootNamespace>
     <PackageId>autosite</PackageId>
-    <PackageVersion>1.1</PackageVersion>
-    <PackageProjectUrl>https://autowebsite.azurewebsites.net</PackageProjectUrl>
+    <PackageVersion>1.1.3</PackageVersion>
+    <PackageProjectUrl>http://autosite.nevillenazerane.com/</PackageProjectUrl>
+    <PackageReleaseNotes>
+      - Site update
+    </PackageReleaseNotes>
+    <PackageReleaseNotes>
+      
+    </PackageReleaseNotes>
     <Description>Auto generate complete websites from scanned images</Description>
     <LangVersion>7.3</LangVersion>
     <PackAsTool>True</PackAsTool>
